Update app.json for expo deploy

--- a/UniMate/frontend/app.json
+++ b/UniMate/frontend/app.json
@@ -2,6 +2,10 @@
   "expo": {
     "name": "unimate",
     "slug": "unimate",
+    "runtimeVersion": {
+      "policy": "sdkVersion"
+    },
+    "owner": "justinpoh2808",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
