--- a/UNIMATE/UNIMATE FINAL/UniMate/frontend/package.json
+++ b/UNIMATE/UNIMATE FINAL/UniMate/frontend/package.json
@@ -31,6 +31,7 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-notifications": "^0.32.12",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.11",
     "react": "^19.1.0",
     "react-native": "^0.81.4",
     "react-native-gesture-handler": "~2.28.0",
@@ -44,6 +45,7 @@
     "@react-native/eslint-config": "^0.81.1",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
+    "eas-cli": "^16.24.1",
     "eslint": "^9.36.0",
     "prettier": "^3.6.2",
     "typescript": "~5.9.2"
