--- a/UNIMATE/UNIMATE FINAL/UniMate/frontend/.env.example
+++ b/UNIMATE/UNIMATE FINAL/UniMate/frontend/.env.example
@@ -16,8 +16,8 @@
 #   - Example: http://10.72.127.211:8000
 # For production:
 #   - Use your deployed backend URL
-#   - Example: https://api.unimate.app
-API_BASE_URL=http://10.72.127.211:8000
+#   - Example: https://your-app.up.railway.app
+EXPO_PUBLIC_API_URL=https://codenection-team-scds-production.up.railway.app
 
 # ============================================================================
 # EXPO CONFIGURATION (Optional)
