--- a/UNIMATE/UNIMATE FINAL/UniMate/frontend/package.json
+++ b/UNIMATE/UNIMATE FINAL/UniMate/frontend/package.json
@@ -20,7 +20,6 @@
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "expo": "~54.0.9",
-    "expo-app-loading": "^1.0.3",
     "expo-asset": "~12.0.9",
     "expo-blur": "~15.0.7",
     "expo-constants": "^18.0.9",
@@ -32,7 +31,7 @@
     "expo-notifications": "^0.32.12",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.11",
-    "react": "^19.1.0",
+    "react": "19.1.0",
     "react-native": "^0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
@@ -44,11 +43,12 @@
   "devDependencies": {
     "@react-native/eslint-config": "^0.81.1",
     "@types/react": "~19.1.0",
-    "@types/react-native": "^0.72.8",
-    "eas-cli": "^16.24.1",
-    "eslint": "^9.36.0",
+    "eslint": "^8.57.0",
     "prettier": "^3.6.2",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "zod": "4.1.12"
   },
   "private": true
 }
