--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,5 +1,5 @@
 [deploy]
-startCommand = "sh -c 'cd /app/backend/aa-test && (npm ci || npm install) && ln -sf /app/backend/aa-test /app/aa-test; uvicorn app:app --host 0.0.0.0 --port $PORT'"
+startCommand = "sh -c 'ln -sf /app/backend/aa-test /app/aa-test; cd /app/aa-test && (npm ci || npm install); uvicorn app:app --host 0.0.0.0 --port $PORT'"
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 10
 
