--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "expo-notifications": "^0.32.12",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.11",
+    "install": "^0.13.0",
+    "npx": "^10.2.2",
     "react": "19.1.0",
     "react-native": "^0.81.4",
     "react-native-gesture-handler": "~2.28.0",
